# cipo

./: .gitignore  Cargo.toml  README.md  config.toml
.copr/: Makefile
.github/workflows/: ci.yml
contrib/: bump-version.sh  cipo.service  cipo.sysusers  rust-cipo.spec
src/: args.rs  common.rs  config.rs  journal.rs  main.rs  monero.rs  shelly.rs
tests/: lib.rs
