[package]
name = "juice_me"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
monero = "0.16"
toml = "0.5.8"
attohttpc = { version = "0.18.0", features = ["json"] }
humantime = "2.1.0"