[package]
name = "cipo"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["monero", "shelly"]
homepage = "https://github.com/hegjon/cipo"
repository = "https://github.com/hegjon/cipo"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[dependencies]
log = "0.4"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
attohttpc = { version = "0.18.0", features = ["json"] }
humantime = "2.1.0"
clap = { version = "3.1.9" }