[package]
name = "cipo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Crypto in, power out"
keywords = ["monero", "shelly"]
homepage = "https://github.com/hegjon/cipo"
repository = "https://github.com/hegjon/cipo"
readme = "README.md"

[badges]
maintenance = { status = "experimental" }

[dependencies]
log = "0"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
attohttpc = { version = "0", features = ["json"] }
humantime = "2.1"
clap = { version = "3.1" }